add CS and TR data for buglocalization